Fixed contact spacing

--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -1,5 +1,6 @@
 .get-in-touch {
   font-size: 5rem;
+  padding-bottom: 3rem;
 }
 
 #contact {
@@ -7,7 +8,7 @@
 }
 
 .email {
-  font-size: 4rem;
+  font-size: 5rem;
   color: rgb(189, 189, 189);
   @media only screen and (max-width: 1050px) {
     font-size: 2rem;
